# mp4decrypt-buffer

./: .gitmodules  .npmignore  CMakeLists.txt  README.md  binding.gyp  index.js  mp4decrypt.cc  package-lock.json  package.json
.github/workflows/: tests.yaml
bento4/win32/: ap4.lib
src/: index.d.ts  index.js  mp4decrypt-buffer.cc
test/: tests.js
